<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_bright"
        android:orientation="horizontal">


        <!-- 返回按钮 -->
        <ImageView
            android:id="@+id/goBackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"/>


        <!-- 标题 -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add_task"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <!-- 第一层 -->
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/task_name"
        android:inputType="text" />

    <!-- 第二层 -->
    <EditText
        android:id="@+id/editAchievementPoints"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/task_scores"
        android:inputType="number" />

    <!-- 第三层 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/task_num"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerTaskType"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:entries="@array/task_types" />
    </LinearLayout>

    <!-- 第四层 -->
    <EditText
        android:id="@+id/editTag"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/task_label"
        android:inputType="text" />

    <!-- 第五层 -->
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/complete" />


</LinearLayout>