<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- 标题栏 -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <!-- 标题 -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/show_task"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"/>


        <ImageView
            android:id="@+id/addButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/add"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/desc"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            tools:ignore="SpeakableTextPresentCheck"
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            app:tabGravity="fill" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/point_sum"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/none"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="34sp" />


        <ImageView
            android:id="@+id/tickImageView"
            android:layout_width="52dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/confirm" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <!-- 其他内容可以添加到这里 -->

</LinearLayout>